--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 </head>
 
 <body>
-    <header class="container">
-        <nav class="navbar navbar-expand-lg navbar-light">
+    <header class="main">
+        <nav class="navbar navbar-expand-lg navbar-light container">
             <div class="container-fluid">
                 <span class="navbar-brand mb-0 h1">i<s>Code</s></span>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -24,6 +24,9 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">About</a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Projects</a>
                         </li>
