--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <!-- Start of Navigation bar -->
     <header class="main">
         <nav class="navbar navbar-expand-lg navbar-light container">
             <div class="container-fluid">
@@ -38,6 +39,28 @@
             </div>
         </nav>
     </header>
+    <!-- End of Navigation bar -->
+    <!-- Start of About section -->
+    <div class="about-container">
+        <div class="container">
+            <div class="about-heading">
+                <div class="about-first-part">
+                    <h2>Hi there</h2>
+                    <img src="./images/waiving arm.png" class="about-image">
+                </div>
+                <h2 class="second-h2">I am Kisavi..</h2>
+            </div>
+            <div class="about-description">
+                <p>I am an aspiring FullStack developer.</p>
+                <p>Currently based in Kenya.</p>
+            </div>
+            <div class="about-button">
+                <button type="button" class="btn btn-outline-secondary">Get in touch</button>
+            </div>
+        </div>
+    </div>
+    <!-- End of About section -->
+
 
 
     <!-- Bootstrap JavaScript Bundle with Popper -->
