Add cards containing projects.

--- a/index.html
+++ b/index.html
@@ -61,6 +61,77 @@
     </div>
     <!-- End of About section -->
     <!-- Start of Project section -->
+    <div class="project-container">
+        <div class="container">
+            <h2>Projects Delivered</h2>
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="card" style="width: 18rem;">
+                        <img src="./images/weather app.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">My Weather App</h5>
+                          <p class="card-text">This application provides a user with real time weather data based on their own location or any city in the world.</p>
+                          <a href="kisavi.github.io/myweatherapp/" class="btn btn-primary">Preview</a>
+                        </div>
+                      </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="card" style="width: 18rem;">
+                        <img src="./images/insurance website.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Insurance Landing Page</h5>
+                          <p class="card-text">This is a landing page for an insuarance company that offers differnt premium covers for it's members.</p>
+                          <a href="kisavi.github.io/insurance_website/" class="btn btn-primary">Preview</a>
+                        </div>
+                      </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="card" style="width: 18rem;">
+                        <img src="./images/quiz board.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">JavaScript Quiz Board</h5>
+                          <p class="card-text">This is a multiple choice JavaScript quiz test board that grades and shows results for the picked answers by the user.</p>
+                          <a href="kisavi.github.io/js_quiz/" class="btn btn-primary">Preview</a>
+                        </div>
+                      </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="card" style="width: 18rem;">
+                        <img src="./images/burger palace.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Restaurant Landing Page</h5>
+                          <p class="card-text">This is a landing page for a burger selling joint. It shows the differnt kind of burgers and offers they have.</p>
+                          <a href="kisavi.github.io/burger-palace/" class="btn btn-primary">Preview</a>
+                        </div>
+                      </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="card" style="width: 18rem;">
+                        <img src="./images/software journey.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">My Software Journey</h5>
+                          <p class="card-text">This is a website which intends to provide newbies venturing into the Tech world with a clear path to follow as they begin that journey.</p>
+                          <a href="https://eloquent-bartik-1d7862.netlify.app/index.html" class="btn btn-primary">Preview</a>
+                        </div>
+                      </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="card" style="width: 18rem;">
+                        <img src="./images/portfolio.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">My Resume</h5>
+                          <p class="card-text">This is a template that I have used to provide more information about myself and some of the projects I have delivered.</p>
+                          <a href="#" class="btn btn-primary">Preview</a>
+                        </div>
+                      </div>
+                </div>
+            </div>
+        </div>
+    </div>
+     <!-- End of Project section -->
+
 
 
 
