Add padding to the cards to space them

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <div class="card-body">
                           <h5 class="card-title">My Weather App</h5>
                           <p class="card-text">This application provides a user with real time weather data based on their own location or any city in the world.</p>
-                          <a href="kisavi.github.io/myweatherapp/" class="btn btn-primary">Preview</a>
+                          <a href="kisavi.github.io/myweatherapp/" class="btn card-btn btn-primary">Preview</a>
                         </div>
                       </div>
                 </div>
