Add social media icons

--- a/index.html
+++ b/index.html
@@ -147,6 +147,12 @@
                 <div class="col-lg-6">
                     <h2>Contact details</h2>
                     <p>Let's connect and share cool ideas.</p>
+                    <div class="social-icons">
+                        <h5>LinkedIn<i class='bx bx-border bx-tada bxl-linkedin' ></i></h5>
+                        <h5>Twitter<i class='bx bx-border bx-tada bxl-twitter'></i></h5>
+                        <h5>Github<i class='bx bx-border bx-tada bxl-github' ></i></h5>
+                        <h5>Slack<i class='bx bx-border bx-tada bxl-slack' ></i></h5>
+                    </div>
                 </div>
                 <div class="col-lg-6">
                     <div class="mb-3">
