--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@
                     <h2>Contact details</h2>
                     <p>Let's connect and share cool ideas.</p>
                     <div class="social-icons">
-                        <h5>LinkedIn<i class='bx bx-border bx-tada bxl-linkedin' ></i></h5>
-                        <h5>Twitter<i class='bx bx-border bx-tada bxl-twitter'></i></h5>
-                        <h5>Github<i class='bx bx-border bx-tada bxl-github' ></i></h5>
-                        <h5>Slack<i class='bx bx-border bx-tada bxl-slack' ></i></h5>
+                        <h5>LinkedIn<a href="#"><i class='bx bx-border bx-tada bxl-linkedin' ></i></a></h5>
+                        <h5>Twitter<a href="#"><i class='bx bx-border bx-tada bxl-twitter' ></i></a></h5>
+                        <h5>Github<a href="#"><i class='bx bx-border bx-tada bxl-github' ></i></a></h5>
+                        <h5>Slack<a href="#"><i class='bx bx-border bx-tada bxl-slack' ></i></a></h5>
                     </div>
                 </div>
                 <div class="col-lg-6">
