Add the footer section

--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@
                     <h2>Contact details</h2>
                     <p>Let's connect and share cool ideas.</p>
                     <div class="social-icons">
-                        <h5>LinkedIn<a href="#"><i class='bx bx-border bx-tada bxl-linkedin' ></i></a></h5>
-                        <h5>Twitter<a href="#"><i class='bx bx-border bx-tada bxl-twitter' ></i></a></h5>
-                        <h5>Github<a href="#"><i class='bx bx-border bx-tada bxl-github' ></i></a></h5>
-                        <h5>Slack<a href="#"><i class='bx bx-border bx-tada bxl-slack' ></i></a></h5>
+                        <h5>LinkedIn<a href="#"><i class='bx bx-border bx-tada bxl-linkedin'></i></a></h5>
+                        <h5>Twitter<a href="#"><i class='bx bx-border bx-tada bxl-twitter'></i></a></h5>
+                        <h5>Github<a href="#"><i class='bx bx-border bx-tada bxl-github'></i></a></h5>
+                        <h5>Slack<a href="#"><i class='bx bx-border bx-tada bxl-slack'></i></a></h5>
                     </div>
                 </div>
                 <div class="col-lg-6">
@@ -176,6 +176,17 @@
         </div>
     </div>
     <!-- End of Contact section -->
+    <!-- Start of Footer section -->
+    <div class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <p>i<S>CODE</S>&copy;2022</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End of Footer section -->
 
 
 
