--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <!-- Start of Navigation bar -->
     <header class="main">
-        <nav class="navbar navbar-expand-lg navbar-light container">
+        <nav id="top" class="navbar navbar-expand-lg navbar-light container fixed-to">
             <div class="container-fluid">
                 <span class="navbar-brand mb-0 h1">i<s>Code</s></span>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -28,13 +28,13 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">About</a>
+                            <a class="nav-link" href="#about">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Projects</a>
+                            <a class="nav-link" href="#projects">Projects</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
+                            <a class="nav-link" href="#contact">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -43,17 +43,17 @@
     </header>
     <!-- End of Navigation bar -->
     <!-- Start of About section -->
-    <div class="about-container">
+    <div id="about" class="about-container">
         <div class="container">
             <div class="about-heading">
                 <div class="about-first-part">
-                    <h2>Hi there</h2>
-                    <img src="./images/waiving arm.png" class="about-image">
+                    <h2>Hi there<i class='bx bx-tada bxs-hand' ></i></h2>
+                    <!-- <img src="./images/waiving arm.png" class="about-image"> -->
                 </div>
                 <h2 class="second-h2">I am Kisavi..</h2>
             </div>
             <div class="about-description">
-                <p>I am an aspiring FullStack developer.</p>
+                <p>An aspiring FullStack web developer.</p>
                 <p>Currently based in Kenya.</p>
             </div>
             <div class="about-button">
@@ -63,7 +63,7 @@
     </div>
     <!-- End of About section -->
     <!-- Start of Project section -->
-    <div class="project-container">
+    <div id="projects" class="project-container">
         <div class="container">
             <h2>Projects Delivered</h2>
             <div class="row">
@@ -141,7 +141,7 @@
     </div>
     <!-- End of Project section -->
     <!-- Start of Contact section -->
-    <div class="contact-container">
+    <div id="contact" class="contact-container">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
@@ -152,6 +152,7 @@
                         <h5>Twitter<a href="#"><i class='bx bx-border bx-tada bxl-twitter'></i></a></h5>
                         <h5>Github<a href="#"><i class='bx bx-border bx-tada bxl-github'></i></a></h5>
                         <h5>Slack<a href="#"><i class='bx bx-border bx-tada bxl-slack'></i></a></h5>
+                        <a href="#top"><i class='bx bxs-up-arrow-square' id="arrow-up"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-6">
