Ft - add links to social media icons

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <p>Currently based in Kenya.</p>
             </div>
             <div class="about-button">
-                <button type="button" class="btn btn-outline-secondary">Get in touch</button>
+                <button type="button" class="btn btn-outline-secondary" onclick="window.location.href='#contact'">Get in touch</button>
             </div>
         </div>
     </div>
@@ -148,10 +148,10 @@
                     <h2>Contact details</h2>
                     <p>Let's connect and share cool ideas.</p>
                     <div class="social-icons">
-                        <h5>LinkedIn<a href="#"><i class='bx bx-border bx-tada bxl-linkedin'></i></a></h5>
-                        <h5>Twitter<a href="#"><i class='bx bx-border bx-tada bxl-twitter'></i></a></h5>
-                        <h5>Github<a href="#"><i class='bx bx-border bx-tada bxl-github'></i></a></h5>
-                        <h5>Slack<a href="#"><i class='bx bx-border bx-tada bxl-slack'></i></a></h5>
+                        <h5>LinkedIn<a href="https://www.linkedin.com/in/denis-kagunda-5a391612a/"><i class='bx bx-border bx-tada bxl-linkedin'></i></a></h5>
+                        <h5>Twitter<a href="https://twitter.com/CurveIt19"><i class='bx bx-border bx-tada bxl-twitter'></i></a></h5>
+                        <h5>Github<a href="https://github.com/Kisavi"><i class='bx bx-border bx-tada bxl-github'></i></a></h5>
+                        <h5>Slack<a href="https://app.slack.com/client/T0101L740P4/D02TFQE64MV"><i class='bx bx-border bx-tada bxl-slack'></i></a></h5>
                         <a href="#top"><i class='bx bxs-up-arrow-square' id="arrow-up"></i></a>
                     </div>
                 </div>
