St - hide card paragraph contents and display on hover

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                             placeholder="Message"></textarea>
                     </div>
                     <div class="form-button">
-                        <button type="submit" class="btn btn-primary form-control">Submit</button>
+                        <button type="submit" class="btn btn-primary form-control" onclick="window.location.href='mailto:deniskisavi@gmail.com'">Submit</button>
                     </div>
                 </div>
             </div>
