Fix - update project links

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                             <h5 class="card-title">My Weather App</h5>
                             <p class="card-text">This application provides a user with real time weather data based on
                                 their own location or any city in the world.</p>
-                            <a href="kisavi.github.io/myweatherapp/" class="btn btn-primary">Preview</a>
+                            <a href="https://kisavi.github.io/MyWeatherApp/" class="btn btn-primary">Preview</a>
                         </div>
                     </div>
                 </div>
@@ -85,7 +85,7 @@
                             <h5 class="card-title">Insurance Landing Page</h5>
                             <p class="card-text">This is a landing page for an insuarance company that offers differnt
                                 premium covers for it's members.</p>
-                            <a href="kisavi.github.io/insurance_website/" class="btn btn-primary">Preview</a>
+                            <a href="https://kisavi.github.io/insurance_website/" class="btn btn-primary">Preview</a>
                         </div>
                     </div>
                 </div>
@@ -96,7 +96,7 @@
                             <h5 class="card-title">JavaScript Quiz Board</h5>
                             <p class="card-text">This is a multiple choice JavaScript quiz test board that grades and
                                 shows results for the picked answers by the user.</p>
-                            <a href="kisavi.github.io/js_quiz/" class="btn btn-primary">Preview</a>
+                            <a href="https://kisavi.github.io/JS_quiz/" class="btn btn-primary">Preview</a>
                         </div>
                     </div>
                 </div>
@@ -109,7 +109,7 @@
                             <h5 class="card-title">Restaurant Landing Page</h5>
                             <p class="card-text">This is a landing page for a burger selling joint. It shows the
                                 differnt kind of burgers and offers they have.</p>
-                            <a href="kisavi.github.io/burger-palace/" class="btn btn-primary">Preview</a>
+                            <a href="https://kisavi.github.io/BURGER-PALACE/" class="btn btn-primary">Preview</a>
                         </div>
                     </div>
                 </div>
@@ -132,7 +132,7 @@
                             <h5 class="card-title">My Resume</h5>
                             <p class="card-text">This is a template that I have used to provide more information about
                                 myself and some of the projects I have delivered.</p>
-                            <a href="#" class="btn btn-primary">Preview</a>
+                            <a href="https://kisavi.github.io/My-Portfolio/" class="btn btn-primary">Preview</a>
                         </div>
                     </div>
                 </div>
