--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <h2 class="second-h2">I am Kisavi..</h2>
             </div>
             <div class="about-description">
-                <p>An aspiring FullStack web developer.</p>
+                <p>A FullStack web developer.</p>
                 <p>Currently based in Kenya.</p>
             </div>
             <div class="about-button">
